--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
     margin: 0;
 }
 
+.container {
+    max-width: 1150px;
+    margin: auto;
+}
+
 header {
     #navbar {
         display: flex;
@@ -21,22 +26,64 @@ header {
         }
 
         button {
-            background-color: black;
-            color: white;
+
             padding: 8px 20px;
         }
     }
 
     #banner {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         background-image: url(Images/banner.png);
         height: 100vh;
         background-repeat: no-repeat;
         background-size: cover;
 
-        .textCenter {
+        .text-banner {
             display: flex;
-            justify-content: center;
+            flex-direction: column;
             align-items: center;
+            gap: 20px;
         }
+
+        button {
+            padding: 8px 20px;
+        }
+    }
+}
+
+main {
+    #advantages {
+        .container {
+            #text-advantages {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 10px;
+                padding: 40px 0;
+            }
+
+
+            .card-container {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                gap: 20px;
+                padding: 40px;
+
+                .card-advantages {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    flex-wrap: wrap;
+                    border: solid, black, 1px;
+                    padding: 20px;
+                    width: 300px;
+                    box-sizing: border-box
+                }
+            }
+        }
+
     }
 }
