--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@
     margin: 0;
 }
 
+.logo {
+    font-size: 24px;
+    font-family: "Dancing Script", cursive;
+    font-weight: 400;
+}
+
 .container {
     max-width: 1200px;
     margin: auto;
@@ -136,6 +142,7 @@ main {
                 flex-direction: column;
                 align-items: center;
                 flex-wrap: wrap;
+                gap: 20px;
                 border: solid, black, 1px;
                 padding: 20px;
                 max-width: 300px;
@@ -145,6 +152,33 @@ main {
     }
 }
 
-/* footer {
-    
-} */
+footer {
+    #informations {
+        display: flex;
+        justify-content: space-between;
+
+        #navbar2 {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+
+            a {
+                text-decoration: none;
+                color: black;
+            }
+        }
+    }
+
+    #company-name {
+        font-size: 200px;
+        text-align: center;
+    }
+
+    #bottomPage {
+        display: flex;
+        justify-content: space-between;
+        padding: 20px 0 60px 0;
+        margin: 0 40px;
+        border-top: 1px solid black;
+    }
+}
